@@ -1,5 +1,39 @@
 /* config.h.  Generated by configure.  */
 /* config.h.in.  Generated from configure.in by autoheader.  */
+
+/* Version macros for Windows SDK headers */
+#ifdef _WIN64
+#ifdef _M_IA64
+/* Windows XP 64-bit Edition (Itanium) is the first release that is based on Windows XP */
+#define WINVER 0x0501
+#define _WIN32_WINNT 0x0501
+/* Includes Internet Explorer 6.0 */
+#define _WIN32_IE 0x0600
+#else /* !_M_IA64 */
+/* Windows XP Professional x64 Edition is the first release that is based on Windows Server 2003 SP1 */
+#define WINVER 0x0502
+#define _WIN32_WINNT 0x0502
+/* Includes Internet Explorer 6.0 SP2 */
+#define _WIN32_IE 0x0603
+#endif /* _M_IA64 */
+#else /* !_WIN64 */
+/* Windows 2000 is required */
+#define WINVER 0x0500
+#define _WIN32_WINNT 0x0500
+/* Includes Internet Explorer 5.01 */
+#define _WIN32_IE 0x0501
+#endif /* _WIN64 */
+
+#ifndef _UNICODE
+#define _UNICODE
+#endif
+#ifndef UNICODE
+#define UNICODE
+#endif
+
+#define WIN32_THREADS
+#define FD_SETSIZE 1024
+
 /* #undef HAVE_INET_PTON */
 /* #undef HAVE_INET_ATON */
 /* #undef HAVE_MSG_NOSIGNAL */
@@ -40,13 +74,18 @@
 /* #undef HAVE_WORKING_SIGALTSTACK */
 
 /* The architecture this is running on */
+#if defined(_M_IA64)
+#define ARCHITECTURE "ia64"
+#elif defined(_M_AMD64)
+#define ARCHITECTURE "amd64"
+#elif defined(_M_IX86)
 #define ARCHITECTURE "x86"
+#else
+#error Unknown architecture
+#endif
 
 /* String of disabled features */
 #define DISABLED_FEATURES "none"
-
-/* Have GetProcessId */
-#define HAVE_GETPROCESSID 1
 
 /* Disable AOT support */
 /* #undef DISABLE_AOT */
@@ -151,7 +190,9 @@
 /* #undef HAVE_GETGRNAM_R */
 
 /* Define to 1 if you have the `GetProcessId' function. */
-/* #undef HAVE_GETPROCESSID */
+#if (_WIN32_WINNT >= 0x0502)
+#define HAVE_GETPROCESSID 1
+#endif
 
 /* Define to 1 if you have the `getpwnam_r' function. */
 /* #undef HAVE_GETPWNAM_R */
@@ -430,7 +471,11 @@
 /* #undef SIZEOF_SIZE_T */
 
 /* The size of a `void *', as computed by sizeof. */
+#ifdef _WIN64
+#define SIZEOF_VOID_P 8
+#else
 #define SIZEOF_VOID_P 4
+#endif
 
 /* Define to 1 if you have the ANSI C header files. */
 #define STDC_HEADERS 1
@@ -439,8 +484,4 @@
 #define USED_GC_NAME "Included Boehm (with typed GC)"
 
 /* Version number of package */
-#define VERSION "1.2"
-
-#define WINVER 0x0500
-
-#define _WIN32_WINNT 0x0500
+#define VERSION "1.9"
